--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "i18next": "^23.11.1",
-    "i18next-http-backend": "^2.5.0",
+    "i18next": "^23.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
