feat: Candidate page (#1)
* Type and start adding candidate data
* Implement automatic switching between light and dark themes
* clean and name color variables
* switch to using variables for colors (to support theming)
* feat: toolbar styles, homepage start
* feat(candidate page): questions can be unanswered but have comments
* feat(candidate page): show candidate and user answer indicators on yes-no -questions
* feat(candidate page): expand and collapse candidate answer list
* chore: fix eslint config, configure husky, stylelint and lint-staged
* feat(candidate page): show user and candidate answer indicators for on radio options

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "richie5um2.vscode-sort-json",
     "streetsidesoftware.code-spell-checker",
-    "ms-vscode.vscode-typescript-next"
+    "ms-vscode.vscode-typescript-next",
+    "simonsiefke.svg-preview"
   ]
 }
