--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint \"./**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "eslint \"./**/*.{ts,tsx,js,jsx}\" --fix",
     "preview": "vite preview",
-    "prettify": "prettier --write ."
+    "prettify": "prettier --write \"./**/*.{ts,tsx,js,jsx,css}\"",
+    "prepare": "husky",
+    "pre-commit": "lint-staged --concurrent false",
+    "stylelint": "stylelint \"src/**/*.css\""
   },
   "dependencies": {
     "i18next": "^23.11.2",
@@ -32,11 +36,20 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.2.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
+    "stylelint": "^16.6.0",
+    "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,css}": "prettier --write",
+    "*.{ts,tsx,js,jsx}": "eslint",
+    "*.{css}": "stylelint"
   }
 }
