--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "paths": {
       "@components/*": ["./src/components/*"],
       "@stores/*": ["./src/stores/*"],
-      "@data/*": ["./src/data/*"]
+      "@data/*": ["./src/data/*"],
+      "@hooks/*": ["./src/hooks/*"]
     },
 
     /* Bundler mode */
