--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "test": "vitest run",
+    "test:w": "vitest",
     "lint": "eslint \"./**/*.{ts,tsx,js,jsx}\"",
     "lint:fix": "eslint \"./**/*.{ts,tsx,js,jsx}\" --fix",
     "preview": "vite preview",
@@ -20,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
