--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore cypress examples:
+cypress/e2e/1-getting-started/*
+cypress/e2e/2-advanced-examples/*
