--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc && vite build",
     "test": "vitest run",
     "test:w": "vitest",
+    "cy:open": "cypress open",
+    "e2e:chrome": "cypress run --browser chrome",
+    "cy:screenshots": "cypress run --browser chrome --spec cypress/e2e/screenshot-tests/*",
     "lint": "eslint \"./**/*.{ts,tsx,js,jsx}\"",
     "lint:fix": "eslint \"./**/*.{ts,tsx,js,jsx}\" --fix",
     "preview": "vite preview",
@@ -33,6 +36,8 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^13.10.0",
+    "cypress-visual-regression": "5.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
