--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
+# ...but include extensions and settings files
 !.vscode/extensions.json
+!.vscode/settings.json
+
 .idea
 .DS_Store
 *.suo
